# wrs25_pose_estimation_module_ros2

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
action/: BoxVision.action  SprayVision.action  VisionCheck.action
launch/: bringup_vision_action_servers.launch.py
wrs25_pose_estimation_module_ros2/: box_action_server.py  box_model_wrapper.py  spray_action_server.py  spray_model_wrapper.py  vision_check_server.py
